--- a/style.scss
+++ b/style.scss
@@ -7,3 +7,4 @@
 @import "./scss/sections/header.scss";
 @import "./scss/sections/menu.scss";
 @import "./scss/sections/navbar.scss";
+@import "./scss/sections/about.scss";
