--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -2,3 +2,20 @@
   display: flex;
   align-items: center;
 }
+
+@mixin header-right-image-section {
+  flex: 1;
+
+  img {
+    max-width: 100%;
+    height: 100%;
+  }
+}
+
+@mixin header-left-section-common-style {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  flex: 1;
+  padding-left: 3.5em;
+}
