--- a/scss/sections/contact.scss
+++ b/scss/sections/contact.scss
@@ -1,12 +1,8 @@
 // Contact section
 .left-section-contact {
-  flex: 1;
+  @include header-left-section-common-style;
   background-color: $secondary-brand-color-dark;
   color: $basic-white;
-  display: flex;
-  padding-left: 3.5em;
-  flex-direction: column;
-  justify-content: center;
 
   h1 {
     font-family: $font-family-secondary;
@@ -15,18 +11,12 @@
 }
 
 .right-section-contact {
-  flex: 1;
-
-  img {
-    max-width: 100%;
-    height: 100%;
-  }
+  @include header-right-image-section;
 }
 
 form {
-  display: flex;
+  @include flex-center;
   flex-direction: column;
-  align-items: center;
   max-width: 400px;
   background-color: $secondary-brand-color-dark;
   padding: 2em;
