--- a/style.css
+++ b/style.css
@@ -1,11 +1,11 @@
 .left-section-contact {
-  flex: 1;
-  background-color: #689572;
-  color: #ffffff;
   display: flex;
-  padding-left: 3.5em;
   flex-direction: column;
   justify-content: center;
+  flex: 1;
+  padding-left: 3.5em;
+  background-color: #689572;
+  color: #ffffff;
 }
 .left-section-contact h1 {
   font-family: "Rammetto One", sans-serif;
@@ -22,8 +22,8 @@
 
 form {
   display: flex;
-  flex-direction: column;
   align-items: center;
+  flex-direction: column;
   max-width: 400px;
   background-color: #689572;
   padding: 2em;
@@ -136,13 +136,13 @@ header {
   margin-top: 1em;
 }
 header .left-section {
-  flex: 1;
-  background-color: #689572;
-  color: #ffffff;
   display: flex;
-  padding-left: 3.5em;
   flex-direction: column;
   justify-content: center;
+  flex: 1;
+  padding-left: 3.5em;
+  background-color: #689572;
+  color: #ffffff;
 }
 header .left-section h1 {
   font-family: "Rammetto One", sans-serif;
@@ -166,7 +166,7 @@ header .right-section {
 }
 header .right-section img {
   max-width: 100%;
-  height: auto;
+  height: 100%;
 }
 
 .menu-section {
@@ -271,6 +271,28 @@ nav ul .nav-links {
 }
 nav ul .nav-links li {
   margin-left: 5em;
+}
+
+.about-content {
+  padding: 2rem;
+  background-color: #faa196;
+  margin: 2em auto;
+  max-width: 80%;
+  margin-bottom: 0px;
+}
+.about-content h2 {
+  color: #ffffff;
+  font-family: "Rammetto One", sans-serif;
+  font-size: 2rem;
+  margin-bottom: 1rem;
+  text-align: center;
+}
+.about-content p {
+  color: #404040;
+  font-weight: bold;
+  font-size: 1.5em;
+  line-height: 1.6;
+  margin-bottom: 1.5rem;
 }
 
 /*# sourceMappingURL=style.css.map */
