--- a/scss/sections/menu.scss
+++ b/scss/sections/menu.scss
@@ -30,6 +30,7 @@
     .menu-content {
       display: flex;
       flex-wrap: wrap;
+      justify-content: space-between;
       gap: 1rem;
       margin-top: 1rem;
 
