--- a/scss/sections/review.scss
+++ b/scss/sections/review.scss
@@ -24,8 +24,9 @@
       max-width: 38%;
 
       p {
+        font-family: $font-family-primary;
         font-weight: bold;
-        font-size: 1.5em;
+        font-size: 1.3em;
         text-align: center;
 
         .fa-quote-left {
